Decimosexto Commit: Agregando Backend, modificando carpetas

--- a/templates/confirmarPedido.html
+++ b/templates/confirmarPedido.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Confirmar pedido | FitKids</title>
 
-  <link rel="icon" href="../img/logo_fit_kids.png">
-  <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/confirmarPedido.css">
+  <link rel="icon" href="/static/img/logo_fit_kids.png">
+  <link rel="stylesheet" href="/static/css/styles.css">
+  <link rel="stylesheet" href="/static/css/confirmarPedido.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="contenedor">
       <div class="logo-titulo">
         <a href="index.html" aria-label="Ir al inicio">
-          <img src="../img/logo_fit_kids.png" alt="FitKids">
+          <img src="/static/img/logo_fit_kids.png" alt="FitKids">
         </a>
         <h1>FitKids</h1>
       </div>
@@ -96,6 +96,6 @@
     </section>
   </main>
 
-  <script src="../js/confirmarPedido.js"></script>
+  <script src="/static/js/confirmarPedido.js"></script>
 </body>
 </html>
