--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>FitKids</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../img/logo_fit_kids.png">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="icon" href="/static/img/logo_fit_kids.png">
+  <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   <div class="contenedor">
     <div class="logo-titulo">
       <a href="index.html">
-        <img src="../img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
+        <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
@@ -45,17 +45,17 @@
         <div class="grid">
             <div class="card">
             <h4>Coordinación</h4>
-            <img src="../img/Coordinacion_Fitkids.jpg" alt="coordinacion">
+            <img src="/static/img/Coordinacion_Fitkids.jpg" alt="coordinacion">
             <p>Desarrollo motriz mediante juegos y circuitos dinámicos.</p>
             </div>
             <div class="card">
             <h4>Fuerza y Resistencia</h4>
-            <img src="../img/Fuerza_Fitkids.jpg" alt="fuerza">
+            <img src="/static/img/Fuerza_Fitkids.jpg" alt="fuerza">
             <p>Entrenamiento funcional adaptado a cada edad.</p>
             </div>
             <div class="card">
             <h4>Confianza</h4>
-            <img src="../img/Confianza_Fitkids.jpg" alt="confianza">
+            <img src="/static/img/Confianza_Fitkids.jpg" alt="confianza">
             <p>Niños seguros, activos y con hábitos saludables.</p>
             </div>
         </div>
@@ -88,7 +88,7 @@
   </div>
 
   <div class="sidechat-input">
-    <input id="sideChatInput" type="text" placeholder="Escribe aquí..." autocomplete="off">
+    <input id="sideChatInput" type="text" placeholder="Escribe aquí/static." autocomplete="off">
     <button id="sideChatSend">Enviar</button>
   </div>
 </aside>
@@ -98,21 +98,21 @@
      class="social-bubble whatsapp"
      target="_blank"
      aria-label="WhatsApp">
-    <img src="../img/wsp.png" alt="WhatsApp">
+    <img src="/static/img/wsp.png" alt="WhatsApp">
   </a>
 
   <a href="https://www.instagram.com/fitkidsaqp/"
      class="social-bubble instagram"
      target="_blank"
      aria-label="Instagram">
-    <img src="../img/instagram.png" alt="Instagram">
+    <img src="/static/img/instagram.png" alt="Instagram">
   </a>
 
   <a href="https://www.facebook.com/FitKidsAqp"
      class="social-bubble facebook"
      target="_blank"
      aria-label="Facebook">
-    <img src="../img/facebook.png" alt="Facebook">
+    <img src="/static/img/facebook.png" alt="Facebook">
   </a>
 </div>
 
@@ -153,7 +153,7 @@
     © 2025 FitKids · Bienestar físico infantil
   </div>
 </footer>
-<script src="../js/chatbot.js"></script>
+<script src="/static/js/chatbot.js"></script>
 
 </body>
 </html>
