--- a/templates/nuestraTienda.html
+++ b/templates/nuestraTienda.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Tienda | FitKids</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../img/logo_fit_kids.png">
-  <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/tienda.css">
+  <link rel="icon" href="/static/img/logo_fit_kids.png">
+  <link rel="stylesheet" href="/static/css/styles.css">
+  <link rel="stylesheet" href="/static/css/tienda.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
   <div class="contenedor">
     <div class="logo-titulo">
       <a href="index.html">
-        <img src="../img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
+        <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
@@ -51,7 +51,7 @@
 
     <div class="grid-tienda">
       <article class="producto">
-        <img class="thumb" src="../img/estacion.png" alt="Plan Paucarpata">
+        <img class="thumb" src="/static/img/estacion.png" alt="Plan Paucarpata">
         <div class="info">
           <span class="badge">Paucarpata</span>
           <h3>Plan Paucarpata</h3>
@@ -65,7 +65,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="../img/FitKids_juntos.jpg" alt="Plan Recoleta">
+        <img class="thumb" src="/static/img/FitKids_juntos.jpg" alt="Plan Recoleta">
         <div class="info">
           <span class="badge">Recoleta</span>
           <h3>Plan Recoleta</h3>
@@ -80,7 +80,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="../img/paracaidas_fitkids.png" alt="Plan Full">
+        <img class="thumb" src="/static/img/paracaidas_fitkids.png" alt="Plan Full">
         <div class="info">
           <span class="badge">Full</span>
           <h3>Plan Full</h3>
@@ -102,7 +102,7 @@
 
     <div class="grid-tienda">
       <article class="producto">
-        <img class="thumb" src="../img/paracaidas_fitkids.png" alt="Kit Coordinación">
+        <img class="thumb" src="/static/img/paracaidas_fitkids.png" alt="Kit Coordinación">
         <div class="info">
           <span class="badge">En casa</span>
           <h3>Kit Coordinación</h3>
@@ -113,7 +113,7 @@
                href="#"
                data-nombre="Kit Coordinación"
                data-precio="49"
-               data-img="../img/paracaidas_fitkids.png"
+               data-img="/static/img/paracaidas_fitkids.png"
                data-detalle="Kit (En casa)">
               Agregar al carrito
             </a>
@@ -122,7 +122,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="../img/estacion.png" alt="Kit Movimiento">
+        <img class="thumb" src="/static/img/estacion.png" alt="Kit Movimiento">
         <div class="info">
           <span class="badge">Juego</span>
           <h3>Kit Movimiento</h3>
@@ -133,7 +133,7 @@
                href="#"
                data-nombre="Kit Movimiento"
                data-precio="59"
-               data-img="../img/estacion.png"
+               data-img="/static/img/estacion.png"
                data-detalle="Kit (Juego)">
               Agregar al carrito
             </a>
@@ -142,7 +142,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="../img/FitKids_juntos.jpg" alt="Kit Familiar">
+        <img class="thumb" src="/static/img/FitKids_juntos.jpg" alt="Kit Familiar">
         <div class="info">
           <span class="badge">Familiar</span>
           <h3>Kit Familiar</h3>
@@ -153,7 +153,7 @@
                href="#"
                data-nombre="Kit Familiar"
                data-precio="69"
-               data-img="../img/FitKids_juntos.jpg"
+               data-img="/static/img/FitKids_juntos.jpg"
                data-detalle="Kit (Familiar)">
               Agregar al carrito
             </a>
@@ -170,7 +170,7 @@
 
     <div class="grid-tienda">
       <article class="producto">
-        <img class="thumb" src="../img/fondo_Fitkids.jpg" alt="Mochila FitKids">
+        <img class="thumb" src="/static/img/fondo_Fitkids.jpg" alt="Mochila FitKids">
         <div class="info">
           <span class="badge">Accesorio</span>
           <h3>Mochila FitKids</h3>
@@ -181,7 +181,7 @@
                href="#"
                data-nombre="Mochila FitKids"
                data-precio="40"
-               data-img="../img/fondo_Fitkids.jpg"
+               data-img="/static/img/fondo_Fitkids.jpg"
                data-detalle="Accesorio">
               Agregar al carrito
             </a>
@@ -190,7 +190,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" id="poloImg" src="../img/Polo_Negro_Fitkids.jpeg" alt="Polo FitKids">
+        <img class="thumb" id="poloImg" src="/static/img/Polo_Negro_Fitkids.jpeg" alt="Polo FitKids">
         <div class="info">
           <span class="badge">Merch</span>
           <h3>Polo FitKids</h3>
@@ -208,7 +208,7 @@
                id="btnAddPolo"
                data-nombre="Polo FitKids"
                data-precio="30"
-               data-img="../img/Polo_Negro_Fitkids.jpeg"
+               data-img="/static/img/Polo_Negro_Fitkids.jpeg"
                data-detalle="Merch">
               Agregar al carrito
             </a>
@@ -217,7 +217,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="../img/Gorro_Fitkids.jpeg" alt="Gorra FitKids">
+        <img class="thumb" src="/static/img/Gorro_Fitkids.jpeg" alt="Gorra FitKids">
         <div class="info">
           <span class="badge">Merch</span>
           <h3>Gorra FitKids</h3>
@@ -228,7 +228,7 @@
                href="#"
                data-nombre="Gorra FitKids"
                data-precio="20"
-               data-img="../img/Gorro_Fitkids.jpeg"
+               data-img="/static/img/Gorro_Fitkids.jpeg"
                data-detalle="Merch">
               Agregar al carrito
             </a>
@@ -307,7 +307,7 @@
   </div>
 
   <div class="sidechat-input">
-    <input id="sideChatInput" type="text" placeholder="Escribe aquí..." autocomplete="off">
+    <input id="sideChatInput" type="text" placeholder="Escribe aquí/static." autocomplete="off">
     <button id="sideChatSend">Enviar</button>
   </div>
 </aside>
@@ -317,21 +317,21 @@
      class="social-bubble whatsapp"
      target="_blank"
      aria-label="WhatsApp">
-    <img src="../img/wsp.png" alt="WhatsApp">
+    <img src="/static/img/wsp.png" alt="WhatsApp">
   </a>
 
   <a href="https://www.instagram.com/fitkidsaqp/"
      class="social-bubble instagram"
      target="_blank"
      aria-label="Instagram">
-    <img src="../img/instagram.png" alt="Instagram">
+    <img src="/static/img/instagram.png" alt="Instagram">
   </a>
 
   <a href="https://www.facebook.com/FitKidsAqp"
      class="social-bubble facebook"
      target="_blank"
      aria-label="Facebook">
-    <img src="../img/facebook.png" alt="Facebook">
+    <img src="/static/img/facebook.png" alt="Facebook">
   </a>
 </div>
 
@@ -371,8 +371,8 @@
   </div>
 </footer>
 
-<script src="../js/carrito.js"></script>
-<script src="../js/cambiarColor.js"></script>
+<script src="/static/js/carrito.js"></script>
+<script src="/static/js/cambiarColor.js"></script>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
@@ -392,6 +392,6 @@
     });
   });
 </script>
-<script src="../js/chatbot.js"></script>
+<script src="/static/js/chatbot.js"></script>
 </body>
 </html>
