--- a/templates/nuestrasSedes.html
+++ b/templates/nuestrasSedes.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Nuestras Sedes | FitKids</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../img/logo_fit_kids.png">
-  <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/sedes.css">
+  <link rel="icon" href="/static/img/logo_fit_kids.png">
+  <link rel="stylesheet" href="/static/css/styles.css">
+  <link rel="stylesheet" href="/static/css/sedes.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   <div class="contenedor">
     <div class="logo-titulo">
       <a href="index.html">
-        <img src="../img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
+        <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
@@ -44,7 +44,7 @@
     <div class="sedes-grid">
 
       <article class="sede-card">
-        <img class="sede-thumb" src="../img/Coviseal_FitKids.jpg" alt="Sede Paucarpata FitKids">
+        <img class="sede-thumb" src="/static/img/Coviseal_FitKids.jpg" alt="Sede Paucarpata FitKids">
         <div class="sede-info">
           <span class="sede-badge">Paucarpata</span>
           <h3>Sede Paucarpata</h3>
@@ -64,7 +64,7 @@
       </article>
 
       <article class="sede-card">
-        <img class="sede-thumb" src="../img/Recoleta_Fitkids.jpg" alt="Sede Parque FitKids">
+        <img class="sede-thumb" src="/static/img/Recoleta_Fitkids.jpg" alt="Sede Parque FitKids">
         <div class="sede-info">
           <span class="sede-badge">Recoleta</span>
           <h3>Sede Recoleta</h3>
@@ -123,7 +123,7 @@
   </div>
 
   <div class="sidechat-input">
-    <input id="sideChatInput" type="text" placeholder="Escribe aquí..." autocomplete="off">
+    <input id="sideChatInput" type="text" placeholder="Escribe aquí/static." autocomplete="off">
     <button id="sideChatSend">Enviar</button>
   </div>
 </aside>
@@ -133,21 +133,21 @@
      class="social-bubble whatsapp"
      target="_blank"
      aria-label="WhatsApp">
-    <img src="../img/wsp.png" alt="WhatsApp">
+    <img src="/static/img/wsp.png" alt="WhatsApp">
   </a>
 
   <a href="https://www.instagram.com/fitkidsaqp/"
      class="social-bubble instagram"
      target="_blank"
      aria-label="Instagram">
-    <img src="../img/instagram.png" alt="Instagram">
+    <img src="/static/img/instagram.png" alt="Instagram">
   </a>
 
   <a href="https://www.facebook.com/FitKidsAqp"
      class="social-bubble facebook"
      target="_blank"
      aria-label="Facebook">
-    <img src="../img/facebook.png" alt="Facebook">
+    <img src="/static/img/facebook.png" alt="Facebook">
   </a>
 </div>
 
@@ -188,6 +188,6 @@
     © 2025 FitKids · Bienestar físico infantil
   </div>
 </footer>
-<script src="../js/chatbot.js"></script>
+<script src="/static/js/chatbot.js"></script>
 </body>
 </html>
