--- a/templates/confirmarPedido.html
+++ b/templates/confirmarPedido.html
@@ -15,18 +15,18 @@
   <header class="encabezado">
     <div class="contenedor">
       <div class="logo-titulo">
-        <a href="index.html" aria-label="Ir al inicio">
+        <a href="/" aria-label="Ir al inicio">
           <img src="/static/img/logo_fit_kids.png" alt="FitKids">
         </a>
         <h1>FitKids</h1>
       </div>
 
       <nav class="menu">
-        <a href="index.html">Inicio</a>
-        <a href="quienesSomos.html">Quiénes somos</a>
-        <a href="nuestraTienda.html">Tienda</a>
-        <a href="nuestrasSedes.html">Sedes</a>
-        <a href="inscripciones.html">Inscripciones</a>
+        <a href="/">Inicio</a>
+        <a href="/quienes-somos">Quiénes somos</a>
+        <a href="/tienda">Tienda</a>
+        <a href="/sedes">Sedes</a>
+        <a href="/inscripciones">Inscripciones</a>
       </nav>
     </div>
   </header>
