--- a/templates/index.html
+++ b/templates/index.html
@@ -13,17 +13,17 @@
 <header class="encabezado">
   <div class="contenedor">
     <div class="logo-titulo">
-      <a href="index.html">
+      <a href="/">
         <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
 
     <nav class="menu">
-      <a href="quienesSomos.html">Quiénes somos</a>
-      <a href="nuestraTienda.html">Tienda</a>
-      <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="inscripciones.html">Inscríbete</a>
+      <a href="/quienes-somos">Quiénes somos</a>
+      <a href="/tienda">Tienda</a>
+      <a href="/sedes">Nuestras Sedes</a>
+      <a href="/inscripciones">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -35,7 +35,7 @@
       Entrenamiento pre operacional que desarrolla coordinación,
       fuerza y confianza a través del juego.
     </p>
-    <a href="inscripciones.html" class="btn-principal">Inscríbete ahora</a>
+    <a href="/inscripciones" class="btn-principal">Inscríbete ahora</a>
   </div>
 </section>
 
@@ -88,7 +88,7 @@
   </div>
 
   <div class="sidechat-input">
-    <input id="sideChatInput" type="text" placeholder="Escribe aquí/static." autocomplete="off">
+    <input id="sideChatInput" type="text" placeholder="Escribe aquí..." autocomplete="off">
     <button id="sideChatSend">Enviar</button>
   </div>
 </aside>
@@ -130,11 +130,11 @@
     <div class="footer-col">
       <h4>Enlaces</h4>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="quienesSomos.html">Quiénes somos</a></li>
-        <li><a href="nuestraTienda.html">Tienda</a></li>
-        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="inscripciones.html">Inscríbete</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/quienes-somos">Quiénes somos</a></li>
+        <li><a href="/tienda">Tienda</a></li>
+        <li><a href="/sedes">Nuestras sedes</a></li>
+        <li><a href="/inscripciones">Inscríbete</a></li>
       </ul>
     </div>
 
