--- a/templates/nuestraTienda.html
+++ b/templates/nuestraTienda.html
@@ -14,17 +14,17 @@
 <header class="encabezado">
   <div class="contenedor">
     <div class="logo-titulo">
-      <a href="index.html">
+      <a href="/">
         <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
 
     <nav class="menu">
-      <a href="quienesSomos.html">Quiénes somos</a>
-      <a href="nuestraTienda.html" class="activo">Tienda</a>
-      <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="inscripciones.html">Inscríbete</a>
+      <a href="/quienes-somos">Quiénes somos</a>
+      <a href="/tienda" class="activo">Tienda</a>
+      <a href="/sedes">Nuestras Sedes</a>
+      <a href="/inscripciones">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -51,7 +51,7 @@
 
     <div class="grid-tienda">
       <article class="producto">
-        <img class="thumb" src="/static/img/estacion.png" alt="Plan Paucarpata">
+        <img class="thumb" src="/static/img/plan_paucarpata_Fitkids.png" alt="Plan Paucarpata">
         <div class="info">
           <span class="badge">Paucarpata</span>
           <h3>Plan Paucarpata</h3>
@@ -59,13 +59,13 @@
           <p>De 4:30 pm a 6:00 pm</p>
           <div class="meta">
             <span class="precio">S/ 90 / mes</span>
-            <a class="btn-secundario" href="inscripciones.html">Inscribirme</a>
+            <a class="btn-secundario" href="/inscripciones">Inscribirme</a>
           </div>
         </div>
       </article>
 
       <article class="producto">
-        <img class="thumb" src="/static/img/FitKids_juntos.jpg" alt="Plan Recoleta">
+        <img class="thumb" src="/static/img/plan_recoleta_FitKids.png" alt="Plan Recoleta">
         <div class="info">
           <span class="badge">Recoleta</span>
           <h3>Plan Recoleta</h3>
@@ -74,13 +74,13 @@
           <p>Sábado de 9 am a 10:30 am</p>
           <div class="meta">
             <span class="precio">S/ 90 / mes</span>
-            <a class="btn-secundario" href="inscripciones.html">Inscribirme</a>
+            <a class="btn-secundario" href="/inscripciones">Inscribirme</a>
           </div>
         </div>
       </article>
 
       <article class="producto">
-        <img class="thumb" src="/static/img/paracaidas_fitkids.png" alt="Plan Full">
+        <img class="thumb" src="/static/img/plan_full_Fitkids.png" alt="Plan Full">
         <div class="info">
           <span class="badge">Full</span>
           <h3>Plan Full</h3>
@@ -88,7 +88,7 @@
           <p>¡Te regalamos un full kit!</p>
           <div class="meta">
             <span class="precio">S/ 150 / mes</span>
-            <a class="btn-secundario" href="inscripciones.html">Inscribirme</a>
+            <a class="btn-secundario" href="/inscripciones">Inscribirme</a>
           </div>
         </div>
       </article>
@@ -102,7 +102,7 @@
 
     <div class="grid-tienda">
       <article class="producto">
-        <img class="thumb" src="/static/img/paracaidas_fitkids.png" alt="Kit Coordinación">
+        <img class="thumb" src="/static/img/kit_Coordinacion_Fitkids.jpg" alt="Kit Coordinación">
         <div class="info">
           <span class="badge">En casa</span>
           <h3>Kit Coordinación</h3>
@@ -113,7 +113,7 @@
                href="#"
                data-nombre="Kit Coordinación"
                data-precio="49"
-               data-img="/static/img/paracaidas_fitkids.png"
+               data-img="/static/img/kit_Coordinacion_Fitkids.jpg"
                data-detalle="Kit (En casa)">
               Agregar al carrito
             </a>
@@ -122,7 +122,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="/static/img/estacion.png" alt="Kit Movimiento">
+        <img class="thumb" src="/static/img/kit_Movimiento_Fitkids.png" alt="Kit Movimiento">
         <div class="info">
           <span class="badge">Juego</span>
           <h3>Kit Movimiento</h3>
@@ -133,7 +133,7 @@
                href="#"
                data-nombre="Kit Movimiento"
                data-precio="59"
-               data-img="/static/img/estacion.png"
+               data-img="/static/img/kit_Movimiento_Fitkids.png"
                data-detalle="Kit (Juego)">
               Agregar al carrito
             </a>
@@ -142,7 +142,7 @@
       </article>
 
       <article class="producto">
-        <img class="thumb" src="/static/img/FitKids_juntos.jpg" alt="Kit Familiar">
+        <img class="thumb" src="/static/img/kit_Familiar_FitKids.png" alt="Kit Familiar">
         <div class="info">
           <span class="badge">Familiar</span>
           <h3>Kit Familiar</h3>
@@ -153,7 +153,7 @@
                href="#"
                data-nombre="Kit Familiar"
                data-precio="69"
-               data-img="/static/img/FitKids_juntos.jpg"
+               data-img="/static/img/kit_Familiar_FitKids.png"
                data-detalle="Kit (Familiar)">
               Agregar al carrito
             </a>
@@ -170,7 +170,7 @@
 
     <div class="grid-tienda">
       <article class="producto">
-        <img class="thumb" src="/static/img/fondo_Fitkids.jpg" alt="Mochila FitKids">
+        <img class="thumb" src="/static/img/Mochila_Fitkids.jpeg" alt="Mochila FitKids">
         <div class="info">
           <span class="badge">Accesorio</span>
           <h3>Mochila FitKids</h3>
@@ -181,7 +181,7 @@
                href="#"
                data-nombre="Mochila FitKids"
                data-precio="40"
-               data-img="/static/img/fondo_Fitkids.jpg"
+               data-img="/static/img/Mochila_Fitkids.jpeg"
                data-detalle="Accesorio">
               Agregar al carrito
             </a>
@@ -348,11 +348,11 @@
     <div class="footer-col">
       <h4>Enlaces</h4>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="quienesSomos.html">Quiénes somos</a></li>
-        <li><a href="nuestraTienda.html">Tienda</a></li>
-        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="inscripciones.html">Inscríbete</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/quienes-somos">Quiénes somos</a></li>
+        <li><a href="/tienda">Tienda</a></li>
+        <li><a href="/sedes">Nuestras sedes</a></li>
+        <li><a href="/inscripciones">Inscríbete</a></li>
       </ul>
     </div>
 
@@ -370,28 +370,9 @@
     © 2025 FitKids · Bienestar físico infantil
   </div>
 </footer>
-
 <script src="/static/js/carrito.js"></script>
 <script src="/static/js/cambiarColor.js"></script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const btnAddPolo = document.getElementById("btnAddPolo");
-    const poloImg = document.getElementById("poloImg");
-
-    if(!btnAddPolo || !poloImg) return;
-
-    const syncImg = () => {
-      btnAddPolo.setAttribute("data-img", poloImg.getAttribute("src"));
-    };
-
-    syncImg();
-
-    document.querySelectorAll(".colores .color").forEach(b => {
-      b.addEventListener("click", () => setTimeout(syncImg, 0));
-    });
-  });
-</script>
+<script src="/static/js/poloSync.js"></script>
 <script src="/static/js/chatbot.js"></script>
 </body>
 </html>
