--- a/templates/nuestrasSedes.html
+++ b/templates/nuestrasSedes.html
@@ -13,17 +13,17 @@
 <header class="encabezado">
   <div class="contenedor">
     <div class="logo-titulo">
-      <a href="index.html">
+      <a href="/">
         <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
 
     <nav class="menu">
-      <a href="quienesSomos.html">Quiénes somos</a>
-      <a href="nuestraTienda.html">Tienda</a>
-      <a href="nuestrasSedes.html" class="activo">Nuestras Sedes</a>
-      <a href="inscripciones.html">Inscríbete</a>
+      <a href="/quienes-somos">Quiénes somos</a>
+      <a href="/tienda">Tienda</a>
+      <a href="/sedes" class="activo">Nuestras Sedes</a>
+      <a href="/inscripciones">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -57,7 +57,7 @@
           </div>
 
           <div class="sede-acciones">
-            <a class="btn-link" href="inscripciones.html">Inscribirme</a>
+            <a class="btn-link" href="/inscripciones">Inscribirme</a>
             <a class="btn-link" href="https://maps.app.goo.gl/QrscmJsHSzGTVLa5A" target="_blank" rel="noopener">Ver mapa</a>
           </div>
         </div>
@@ -77,7 +77,7 @@
           </div>
 
           <div class="sede-acciones">
-            <a class="btn-link" href="inscripciones.html">Inscribirme</a>
+            <a class="btn-link" href="/inscripciones">Inscribirme</a>
             <a class="btn-link" href="https://maps.app.goo.gl/nN5Dh5BohdzgYoE59" target="_blank" rel="noopener">Ver mapa</a>
           </div>
         </div>
@@ -165,11 +165,11 @@
     <div class="footer-col">
       <h4>Enlaces</h4>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="quienesSomos.html">Quiénes somos</a></li>
-        <li><a href="nuestraTienda.html">Tienda</a></li>
-        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="inscripciones.html">Inscríbete</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/quienes-somos">Quiénes somos</a></li>
+        <li><a href="/tienda">Tienda</a></li>
+        <li><a href="/sedes">Nuestras sedes</a></li>
+        <li><a href="/inscripciones">Inscríbete</a></li>
       </ul>
     </div>
 
