--- a/templates/quienesSomos.html
+++ b/templates/quienesSomos.html
@@ -14,17 +14,17 @@
 <header class="encabezado">
   <div class="contenedor">
     <div class="logo-titulo">
-      <a href="index.html">
+      <a href="/">
         <img src="/static/img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
       </a>
       <h1 class="titulo">FitKids</h1>
     </div>
 
     <nav class="menu">
-      <a href="quienesSomos.html" class="activo">Quiénes somos</a>
-      <a href="nuestraTienda.html">Tienda</a>
-      <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="inscripciones.html">Inscríbete</a>
+      <a href="/quienes-somos" class="activo">Quiénes somos</a>
+      <a href="/tienda">Tienda</a>
+      <a href="/sedes">Nuestras Sedes</a>
+      <a href="/inscripciones">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -161,11 +161,11 @@
     <div class="footer-col">
       <h4>Enlaces</h4>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="quienesSomos.html">Quiénes somos</a></li>
-        <li><a href="nuestraTienda.html">Tienda</a></li>
-        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="inscripciones.html">Inscríbete</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/quienes-somos">Quiénes somos</a></li>
+        <li><a href="/tienda">Tienda</a></li>
+        <li><a href="/sedes">Nuestras sedes</a></li>
+        <li><a href="/inscripciones">Inscríbete</a></li>
       </ul>
     </div>
 
