Decimooctavo Commit: Corrigiendo errores

--- a/templates/confirmarPedido.html
+++ b/templates/confirmarPedido.html
@@ -40,7 +40,7 @@
 
       <div id="cpEmpty" class="cp-empty" hidden>
         <p>No hay productos en tu carrito.</p>
-        <a class="cp-btn cp-btn-primary" href="nuestraTienda.html">Ir a la tienda</a>
+        <a class="cp-btn cp-btn-primary" href="/tienda">Ir a la tienda</a>
       </div>
 
       <div id="cpContent" hidden>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="cp-actions">
-              <a class="cp-btn cp-btn-ghost" href="nuestraTienda.html">Seguir comprando</a>
+              <a class="cp-btn cp-btn-ghost" href="/tienda">Seguir comprando</a>
               <button id="cpClear" class="cp-btn cp-btn-danger" type="button">Vaciar carrito</button>
             </div>
           </div>
@@ -95,7 +95,6 @@
       </div>
     </section>
   </main>
-
   <script src="/static/js/confirmarPedido.js"></script>
 </body>
 </html>
