--- a/templates/nuestraTienda.html
+++ b/templates/nuestraTienda.html
@@ -276,7 +276,7 @@
 
     <div class="cart-actions">
       <button class="btn-secundario" id="cartClear" type="button">Vaciar</button>
-      <a href="confirmarPedido.html" class="btn-principal">Confirmar pedido</a>
+      <a href="/confirmar-pedido" class="btn-principal">Confirmar pedido</a>
     </div>
   </div>
 </aside>
@@ -307,7 +307,7 @@
   </div>
 
   <div class="sidechat-input">
-    <input id="sideChatInput" type="text" placeholder="Escribe aquí/static." autocomplete="off">
+    <input id="sideChatInput" type="text" placeholder="Escribe aquí..." autocomplete="off">
     <button id="sideChatSend">Enviar</button>
   </div>
 </aside>
