--- a/templates/inscripciones.html
+++ b/templates/inscripciones.html
@@ -88,7 +88,7 @@
   </div>
 
   <div class="sidechat-input">
-    <input id="sideChatInput" type="text" placeholder="Escribe aquí/static." autocomplete="off">
+    <input id="sideChatInput" type="text" placeholder="Escribe aquí..." autocomplete="off">
     <button id="sideChatSend">Enviar</button>
   </div>
 </aside>
