Bigésimo primer Commit: Modificando información

--- a/templates/inscripciones.html
+++ b/templates/inscripciones.html
@@ -123,7 +123,7 @@
       <h3 class="footer-logo">FitKids</h3>
       <p>
         Bienestar físico infantil a través del movimiento,
-        el juego y el entrenamiento pre-operacional.
+        el juego y el entrenamiento pre-deportivo.
       </p>
     </div>
 
