--- a/templates/quienesSomos.html
+++ b/templates/quienesSomos.html
@@ -41,7 +41,7 @@
       </p>
 
       <p>
-        Nuestro enfoque se basa en el entrenamiento pre operacional, donde el
+        Nuestro enfoque se basa en el entrenamiento pre-deportivo, donde el
         movimiento, el juego y la exploración corporal son las principales
         herramientas de aprendizaje.
       </p>
@@ -154,7 +154,7 @@
       <h3 class="footer-logo">FitKids</h3>
       <p>
         Bienestar físico infantil a través del movimiento,
-        el juego y el entrenamiento pre-operacional.
+        el juego y el entrenamiento pre-deportivo.
       </p>
     </div>
 
