--- a/templates/nuestraTienda.html
+++ b/templates/nuestraTienda.html
@@ -33,7 +33,7 @@
   <div class="contenedor">
     <h2>Tienda FitKids</h2>
     <p>
-      Planes de entrenamiento pre-operacional y productos pensados para el bienestar físico de niños:
+      Planes de entrenamiento pre-deportivo y productos pensados para el bienestar físico de niños:
       movimiento, juego y hábitos saludables.
     </p>
 
@@ -244,7 +244,7 @@
     <h3>Seguridad y bienestar primero</h3>
     <ul>
       <li>Actividades adaptadas por edad y nivel.</li>
-      <li>Enfoque pre-operacional: juego, coordinación y hábitos saludables.</li>
+      <li>Enfoque pre-deportivo: juego, coordinación y hábitos saludables.</li>
       <li>Ambiente controlado y motivador.</li>
       <li>Si necesitas horarios o sede, Inscríbete y te contactamos.</li>
     </ul>
@@ -341,7 +341,7 @@
       <h3 class="footer-logo">FitKids</h3>
       <p>
         Bienestar físico infantil a través del movimiento,
-        el juego y el entrenamiento pre-operacional.
+        el juego y el entrenamiento pre-deportivo.
       </p>
     </div>
 
