--- a/templates/nuestrasSedes.html
+++ b/templates/nuestrasSedes.html
@@ -51,7 +51,7 @@
           <p>Entrenamiento funcional infantil y juegos guiados en ambiente controlado.</p>
 
           <div class="sede-datos">
-            <span>📍 <strong>Dirección:</strong> <span>Av. Ejemplo 123, Arequipa</span></span>
+            <span>📍 <strong>Dirección:</strong> <span>Alberto Laveau, Cercado De Arequipa</span></span>
             <span>🕒 <strong>Horarios:</strong> <span>Lun, Mier, Vier</span></span>
             <span>👦 <strong>Edades:</strong> <span>4–12 años</span></span>
           </div>
@@ -71,7 +71,7 @@
           <p>Actividades al aire libre: circuitos, coordinación y juegos de movimiento.</p>
 
           <div class="sede-datos">
-            <span>📍 <strong>Dirección:</strong> <span>Parque Ejemplo, Arequipa</span></span>
+            <span>📍 <strong>Dirección:</strong> <span>La Recoleta 117, Arequipa</span></span>
             <span>🕒 <strong>Horarios:</strong> <span>Mar, Juev, Sab</span></span>
             <span>👧 <strong>Edades:</strong> <span>4–12 años</span></span>
           </div>
@@ -158,7 +158,7 @@
       <h3 class="footer-logo">FitKids</h3>
       <p>
         Bienestar físico infantil a través del movimiento,
-        el juego y el entrenamiento pre-operacional.
+        el juego y el entrenamiento pre-deportivo.
       </p>
     </div>
 
